--- a/index.html
+++ b/index.html
@@ -2,9 +2,8 @@
 <html>
 
 <head>
-        <title>Homepage</title>
-        <link rel="stylesheet" href="stylesheetasdf.css" type="text/css">
-            <!-- <script>
+<title>Homepage</title>
+<script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
   m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
@@ -13,7 +12,7 @@
   ga('create', 'UA-69191717-1', 'auto');
   ga('send', 'pageview');
 
-</script> -->
+</script>
 </head>
 
 <!-- =============================================   -->
