--- a/home.html
+++ b/home.html
@@ -32,6 +32,34 @@
           }
 }
 
+@-webkit-keyframes move_vert{
+    from   {
+          margin-top : var(--start_top);
+          height     : var(--start_height);
+          background : var(--start_color);
+          }
+    to    {
+          margin-top : var(--end_top);
+          height     : var(--end_height);
+          background : var(--end_color);
+          }
+}
+
+@-webkit-keyframes move_horz{
+    from   {
+          margin-left : var(--start_left);
+          width       : var(--start_width);
+          background  : var(--start_color);
+
+          }
+    to    {
+          margin-left : var(--end_left);
+          width       : var(--end_width);
+          background  : var(--end_color);
+
+          }
+}
+
 
 
 
