add audio example labels

--- a/rnn/rnn_demo.html
+++ b/rnn/rnn_demo.html
@@ -243,28 +243,28 @@ for each epoch:
     <div class="half_size left_floating_div">
         <p class="centered_text">VECTOR APPROACH AUDIO</p>
         <div class="audio_div">
-            <p>Vector length 1024</p>
+            <p>Audio Example 1: Vector length 1024</p>
             <audio controls>
               <source src="audio/vector_1024.mp3" type="audio/mp3">
             Your browser does not support the audio element.
             </audio>
         </div>
         <div class="audio_div">
-            <p>Vector length 512</p>
+            <p>Audio Example 2: Vector length 512</p>
             <audio controls>
               <source src="audio/vector_512.mp3" type="audio/mp3">
             Your browser does not support the audio element.
             </audio>
         </div>
         <div class="audio_div">
-            <p>Vector length 256</p>
+            <p>Audio Example 3: Vector length 256</p>
             <audio controls>
               <source src="audio/vector_256.mp3" type="audio/mp3">
             Your browser does not support the audio element.
             </audio>
         </div>
         <div class="audio_div">
-            <p>Vector length 128</p>
+            <p>Audio Example 4: Vector length 128</p>
             <audio controls>
               <source src="audio/vector_128.mp3" type="audio/mp3">
             Your browser does not support the audio element.
@@ -318,28 +318,28 @@ for each epoch:
     <div class="half_size left_floating_div">
         <p class="centered_text">MAGNITUDE SPECTRUM APPROACH AUDIO</p>
         <div class="audio_div">
-            <p>Hop Size 1024</p>
+            <p>Audio Example 5: Hop Size 1024</p>
             <audio controls>
               <source src="audio/fft_1024.mp3" type="audio/mp3">
             Your browser does not support the audio element.
             </audio>
         </div>
         <div class="audio_div">
-            <p>Hop Size 512</p>
+            <p>Audio Example 6: Hop Size 512</p>
             <audio controls>
               <source src="audio/fft_512.mp3" type="audio/mp3">
             Your browser does not support the audio element.
             </audio>
         </div>
         <div class="audio_div">
-            <p>Hop Size 256</p>
+            <p>Audio Example 7: Hop Size 256</p>
             <audio controls>
               <source src="audio/fft_256.mp3" type="audio/mp3">
             Your browser does not support the audio element.
             </audio>
         </div>
         <div class="audio_div">
-            <p>Hop Size 128</p>
+            <p>Audio Example 8: Hop Size 128</p>
             <audio controls>
               <source src="audio/fft_128.mp3" type="audio/mp3">
             Your browser does not support the audio element.
@@ -347,7 +347,7 @@ for each epoch:
         </div>
 
         <div class="audio_div">
-            <p>Hop Size 56</p>
+            <p>Audio Example 9: Hop Size 56</p>
             <audio controls>
               <source src="audio/fft_56.mp3" type="audio/mp3">
             Your browser does not support the audio element.
@@ -388,7 +388,7 @@ for each epoch:
     <div class="half_size left_floating_div">
         <p class="centered_text">TRANSPOSE APPROACH AUDIO</p>
         <div class="audio_div">
-            <p>Transpose</p>
+            <p>Audio Example 10: Transpose</p>
             <audio controls>
               <source src="audio/transpose.mp3" type="audio/mp3">
             Your browser does not support the audio element.
@@ -431,7 +431,7 @@ for each epoch:
     <div class="half_size left_floating_div">
         <p class="centered_text">COLUMN VECTOR APPROACH AUDIO</p>
         <div class="audio_div">
-            <p>Column Vector</p>
+            <p>Audio Example 11: Column Vector</p>
             <audio controls>
               <source src="audio/column.mp3" type="audio/mp3">
             Your browser does not support the audio element.
