comment out unused js

--- a/nips-2018.html
+++ b/nips-2018.html
@@ -70,7 +70,7 @@ ga('send', 'pageview');
 </div>
 <!--  -->
 <!--=========================overview=========================-->
-
+<!--
 <script>
 
 var yellow   = '#faf051';
@@ -368,6 +368,6 @@ function add_tooltips(){
 
 }
 
-</script>
+</script> -->
 </body>
 </html>
